--- a/client/components/presentational/cards/Cards.css
+++ b/client/components/presentational/cards/Cards.css
@@ -47,3 +47,10 @@
   filter: grayscale(100%);
   transition: filter .5s ease-in-out, opacity .5s ease-in-out;
 }
+
+.progress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
